--- a/esufhkehfksdfkjceshk/esufhkehfksdfkjceshk/Clientform.csproj
+++ b/esufhkehfksdfkjceshk/esufhkehfksdfkjceshk/Clientform.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="audio.cs" />
+    <Compile Include="font.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
