--- a/CommunicationInterface/CommunicationInterface/CommunicationInterface.csproj
+++ b/CommunicationInterface/CommunicationInterface/CommunicationInterface.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Activation" />
     <Reference Include="System.ServiceModel.Activities" />
