--- a/esufhkehfksdfkjceshk/esufhkehfksdfkjceshk/Clientform.csproj
+++ b/esufhkehfksdfkjceshk/esufhkehfksdfkjceshk/Clientform.csproj
@@ -67,11 +67,11 @@
   <ItemGroup>
     <Compile Include="audio.cs" />
     <Compile Include="font.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormMain.Designer.cs">
+      <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="FormPlayerList.cs">
       <SubType>Form</SubType>
@@ -82,8 +82,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="textures.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormMain.resx">
+      <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPlayerList.resx">
       <DependentUpon>FormPlayerList.cs</DependentUpon>
