--- a/esufhkehfksdfkjceshk/esufhkehfksdfkjceshk/Clientform.csproj
+++ b/esufhkehfksdfkjceshk/esufhkehfksdfkjceshk/Clientform.csproj
@@ -53,6 +53,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\OpenTK.GLControl.dll</HintPath>
     </Reference>
+    <Reference Include="render, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\render\render\bin\Debug\render.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
